fix some layout issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -145,8 +145,8 @@ a.active:focus {
   height: 67vh;
   top: 9.9rem;
   flex: 2 1 0%;
-  max-width: 50vw;
-  margin-left: -50px;
+  max-width: 45vw;
+  margin-left: 16px;
   overflow: scroll;
   position: relative;
   scrollbar-width: none;
@@ -445,7 +445,8 @@ footer {
     width: 100vw;
   }
   .map {
-    width: auto;
+    height: auto;
+    width: -webkit-fill-available;
   }
   .image {
     max-width: 30vw;
@@ -563,7 +564,7 @@ footer {
   opacity: 0 !important;
   transition: opacity 1s ease-in-out;
 }
-::-webkit-scrollbar:vertical {
+::-webkit-scrollbar {
   width: 0px;
 }
 /* ... your other CSS ... */
